# weave

./: implementation.md  pyproject.toml
src/weave/: __init__.py  __main__.py
src/weave/agent/: __init__.py  parser.py  prompts.py  react.py
src/weave/chains/: __init__.py  builtins.py  executor.py
src/weave/tui/: app.py  (+6 more)
tests/: conftest.py
tests/integration/: test_chain_executor.py
tests/unit/: test_chain_loader.py  test_registry.py  test_validator.py
textual/: main.py  pyproject.toml  stopwatch.py
weave/: .gitignore  pyproject.toml
weave/.github/: copilot-instructions.md
weave/src/weave/: __init__.py  __main__.py  app.py
weave/src/weave/agent/: parser.py
weave/src/weave/chains/: loader.py
weave/src/weave/core/: exceptions.py  logging.py  registry.py
weave/src/weave/llm/: chat.py  client.py  context.py
weave/src/weave/memory/: __init__.py  project.py
weave/src/weave/sandbox/: limits.py  validator.py
weave/src/weave/tools/: __init__.py  base.py  file_ops.py  http.py  schema.py  scraper.py
weave/src/weave/tui/: __init__.py  app.py  chats_manager.py  models.py  themes.py  weave.scss
weave/src/weave/tui/screens/: __init__.py  chat_screen.py  help_screen.py  home_screen.py
weave/src/weave/tui/widgets/: __init__.py  app_header.py  chat.py  chat_header.py  chat_list.py  chatbox.py  prompt_input.py  response_status.py  welcome.py
weave/tests/: __init__.py
weave/tests/integration/: __init__.py  test_memory_tiers.py  test_react_loop.py
weave/tests/unit/: __init__.py  test_context.py  test_conversation.py  test_file_ops.py  test_schema.py
(+16 files in other folders)
